[dev] Pivot samples. Some fixed.

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>dhtmlxPivot - React integration</title>
+    <link rel="icon" href="./favicon.ico" />
+    <title>DHTMLX widgets - Vue integration</title>
     <link rel="stylesheet" href="./index.css" />
     <script src="./index.js"></script>
   </head>
