--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to top frame for connecting dev tools');
-  }</script><!doctype html><html lang="en"><head><meta charset="UTF-8"><title>dhtmlxPivot - React integration</title><link rel="stylesheet" href="./index.css"><script src="./index.js"></script></head><body></body></head></html><style>#root[hidden],
+  }</script><!doctype html><html lang="en"><head><meta charset="UTF-8"><link rel="icon" href="./favicon.ico"><title>DHTMLX widgets - Vue integration</title><link rel="stylesheet" href="./index.css"><script src="./index.js"></script></head><body></body></head></html><style>#root[hidden],
       #docs-root[hidden] {
         display: none !important;
       }</style><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.286b69a873d49f2f199c.bundle.js"></script><script src="vendors~main.5186f51876b2e6614ceb.bundle.js"></script><script src="main.012858559e7c944ab329.bundle.js"></script></body>
