--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
-    <title>DHTMLX widgets - Vue integration</title>
+    <title>DHTMLX Pivot - React integration</title>
     <link rel="stylesheet" href="./index.css" />
     <script src="./index.js"></script>
   </head>
